--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-  "Token": "token",
+  "Token": "MTAyMzUzMzM0NjE2NjQxOTQ2Ng.GEQ3LV.JrDyrpuCNsZfHr8NSTfs00HCRezX6f3XxOUINs",
   "clientId": "clientID",
   "guildId": "guildID",
-  "botOwnerId": "botOwnerID",
-  "botReadyStatus": false,
-  "botStatusChannel": "897097242861789236",
+  "botOwnerId": "951495275590066226",
+  "botReadyStatus": true,
+  "botStatusChannel": "",
   "futureIdeas": "-reminder \n-bot voting \n-Website to edit config \n-Google(?) search \n-API and rss? \n-math solver \n-Get that fucking console color package so it looks better \n-Currency or xp system \n-Reverse image search",
   "bugsToFix": "-",
-  "stopPassword": "lolipop",
-  "language": "english",
+  "stopPassword": "sarok",
+  "language": "kurdish",
   "debug_level": 2
 }
