--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "Token": "token",
+  "Token": "MTAyMzUzMzM0NjE2NjQxOTQ2Ng.GTItRj.VO9sUp-Y4cYeJHix3vBXaoF-ayYi8ME5WJyxGE",
   "clientId": "clientID",
   "guildId": "guildID",
   "botOwnerId": "botOwnerID",
